--- a/nginx-php-fpm-master/conf/nginx-site.conf
+++ b/nginx-php-fpm-master/conf/nginx-site.conf
@@ -48,14 +48,36 @@ server {
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		fastcgi_pass unix:/var/run/php-fpm.sock;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+    	fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+
+		# 아래부터 버그 해결을 위해 추가해 주실 옵션입니다.
+        # 502 에러를 없애기 위한 proxy 버퍼 관련 설정입니다.
+        proxy_buffer_size               516k;
+        proxy_buffers                   4 516k;
+        proxy_busy_buffers_size         516k;
+ 
+          # 502 에러를 없애기 위한 fastcgi 버퍼 관련 설정입니다.
+        fastcgi_buffering               on;
+        fastcgi_buffer_size             128k;
+        fastcgi_buffers                 16 128k;
+ 
+          # 최대 timeout 설정입니다.
+        fastcgi_connect_timeout         600s;
+        fastcgi_send_timeout            600s;
+        fastcgi_read_timeout            600s;
+ 
+          # 이 아래 설정은 PHP 성능 향상을 위한 옵션입니다. 추가해 주시면 좋습니다.
+        sendfile                        on;
+        tcp_nopush                      off;
+        keepalive_requests              0;
+
 		fastcgi_index index.php;
 		include fastcgi_params;
 	}
 
-        location ~* \.(jpg|jpeg|gif|png|css|js|ico|webp|tiff|ttf|svg)$ {
+    location ~* \.(jpg|jpeg|gif|png|css|js|ico|webp|tiff|ttf|svg)$ {
                 expires           5d;
-        }
+    }
 
 	# deny access to . files, for security
 	#
